added backend test cases using mokito and jacaco